# memora-ai

./: .env.example  package-lock.json  package.json
Backend/: README.md  main.py  pyproject.toml
Backend/data/chroma/44hS9euR8Hw/: chroma.sqlite3
Backend/data/chroma/ZQElzjCsl9o/: chroma.sqlite3
Backend/data/chroma/yBSV9uQD6sw/: chroma.sqlite3
Backend/data/transcripts/: 44hS9euR8Hw.json  ZQElzjCsl9o.json  yBSV9uQD6sw.json
extension/: background.js  manifest.json
extension/popup/: popup.html  popup.js
src/: auth.ts  middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/caption/: route.ts
src/app/clipExtractor/: page.tsx
src/app/dashboard/: page.tsx
src/app/generate/: page.tsx
src/app/generate-clips/: page.tsx
src/app/login/: page.tsx
src/app/videoEditor/: page.tsx
src/components/: AnalyticsPreviewSection.tsx  FeaturesSection.tsx  FinalCTASection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navbar.tsx  PricingSection.tsx  ProblemSection.tsx  SearchBar.tsx  SocialProofStrip.tsx  TestimonialsSection.tsx  ThemeProvider.tsx  UserArcheiveSection.tsx  VideoResults.tsx
src/constants/: constants.tsx
src/lib/: dbConnect.ts  getChannelInfo.ts  getMostViewed.ts  getVideos.ts  mongodb.ts  videoIngestion.ts
src/model/: Accounts.ts  Clip.ts  SharedClip.ts  Transcript.ts  User.ts  Video.ts  YTChannel.ts
src/pages/: Dashboard.tsx  LandingPage.tsx  LoginContent.tsx
src/scripts/: seed.ts
src/views/: ClipsView.tsx  Dashboard.tsx  GenerateView.tsx  LandingPage.tsx  LoginContent.tsx  ViralClipExtractorView.tsx
(+9 files in other folders)
